Fix for bug 54079: don't crash when loading XUL into the composer content area. Simple null check a=akkana, sr=brendan. Landed on trunk and branch